--- a/contrib/chart/backstage/values.yaml
+++ b/contrib/chart/backstage/values.yaml
@@ -36,7 +36,7 @@ backend:
       memory: 1024Mi
 
 lighthouse:
-  enabled: true
+  enabled: false
   replicaCount: 1
   image:
     repository: roadiehq/lighthouse-audit-service
